fix: fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,30 @@ body {
 h1 {
     color: #c71151;
     text-align: center;
+    margin-bottom: 20px;
 }
 
-div {
-    margin: 10px 0;
+.container {
+    max-width: 800px;
+    margin: 0 auto;
 }
 
-#phrase, #filter {
+.form-group {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    min-width: 80px;
+}
+
+input {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #121111;
     border-radius: 5px;
-    width: 50%;
+    width: 100%;
 }
 
 button {
@@ -42,7 +55,7 @@ button:hover {
     border: 1px solid #383636;
     border-radius: 5px;
     min-height: 40px;
-    width: 55%;
+    margin: 20px 0;
 }
 
 #count {
